clusters/k8s-lab/addons/envoy-gateway/gateway/argocd-tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: argocd
  rules:
    - backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 443
